Upgrade IT tests for Task, Email; Added new AOP annotations BindingChecker for Task, Email Controller; Upgrade request and Dto annotations; Add messages.properties; Add user_and_project_and_tasks.sql; Add some exceptions;

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,3 +30,6 @@ taskmanager.task.errors.name_is_blank=Task name must not be empty
 taskmanager.task.errors.description_is_null=Task description must not be null
 taskmanager.task.errors.description_size_in_invalid=Task description must have size from {min} to {max}
 taskmanager.task.errors.description_is_blank=Task description must not be empty
+
+taskmanager.task.errors.deadline_size_in_invalid=Task deadline must have time > current date
+taskmanager.task.errors.tags_size_in_invalid=Task tags must have size < 4
